--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,7 +32,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -53,11 +53,11 @@ android {
         applicationId "com.svkraft.com"
         minSdkVersion 21
         targetSdkVersion 32
-        versionCode 11
+        versionCode 27
         versionName flutterVersionName
     }
 
-signingConfigs {
+    signingConfigs {
         release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
@@ -70,7 +70,7 @@ signingConfigs {
             signingConfig signingConfigs.release
             shrinkResources = false
             minifyEnabled false
-           
+
         }
     }
 }
@@ -82,4 +82,7 @@ flutter {
 dependencies {
     implementation 'androidx.browser:browser:1.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+configurations.all {
+    exclude group: 'com.google.android.gms', module: 'play-services-safetynet'
 }
