--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 9.2.0+1
+version: 10.7.0+1
 
 environment:
   sdk: ">=2.17.0-69.2.beta <3.0.0"
@@ -31,7 +31,8 @@ dependencies:
   badges: ^2.0.3
   bottom_navy_bar: ^6.0.0
   carousel_slider: ^4.1.1
- 
+  firebase_core_platform_interface: 4.5.1
+  firebase_messaging: ^13.0.4 
   cloud_firestore: 
   collection: ^1.15.0
   cupertino_icons: ^1.0.2
@@ -74,6 +75,8 @@ dependencies:
   hijri_picker: ^3.0.0
   flutter_localization:
   share_plus: ^4.5.3
+  loading_animation_widget: ^1.2.0+4
+  permission_handler: ^10.2.0
   
   
 
